# yy3588_extras

./: .gitignore  README.md
app/lvgl_demo/: CMakeLists.txt
app/lvgl_demo/amp_monitor/: CMakeLists.txt  client.c  main.c  main.h  monitor.c
app/lvgl_demo/amp_monitor/overlay/: 05-amp-monitor-launcher.ini  cyclictest_ui.sh
app/lvgl_demo/cJSON/: cJSON.c  cJSON.h
app/lvgl_demo/flexbus/: CMakeLists.txt  fft.c  flexbus.c  main.c  main.h  monitor.c  rpmsg.c
app/lvgl_demo/flexbus/overlay/: 05-flexbus-launcher.ini
app/lvgl_demo/gallery/: CMakeLists.txt  gallery.c  gallery.h  helloworld.c  main.c
app/lvgl_demo/gallery/anims/: cube_flip.c  cube_flip.h  cube_lyric.c  cube_lyric.h  cube_rotate.c  cube_rotate.h  fade_out.c  fade_out.h  fade_slide_out.c  fade_slide_out.h  fold.c  fold.h  photo_stream.c  photo_stream.h  roller.c  roller.h  slide_out.c  slide_out.h  stiker.c  stiker.h
app/lvgl_demo/hal/: evdev.c  evdev.h  hal_sdl.c  key.c  key.h
app/lvgl_demo/lv_demo/: CMakeLists.txt  main.c
app/lvgl_demo/lvgl/: lv_port_file.c  lv_port_indev.c
app/lvgl_demo/motor_demo/: CMakeLists.txt  main.c  main.h  ml_label.c  ml_label.h
app/lvgl_demo/motor_demo/deprecated/: main.c  position_control.c  speed_control.c
app/lvgl_demo/rk_demo/: CMakeLists.txt  S00-lv_demo  S99-lv_demo-end  main.c  main.h  ui_btnmatrix.c
app/lvgl_demo/rk_demo/furniture_control/: coffee_machine.c  furniture_control_ui.c  player_ui.c
app/lvgl_demo/rk_demo/home/: home_ui.c
app/lvgl_demo/rk_demo/include/: RkBleClient.h  RkBtBase.h  Rk_wifi.h  utility.h
app/lvgl_demo/rk_demo/intercom_homepage/intercom_call/: ui_intercom_call.c
app/lvgl_demo/rk_demo/intercom_homepage/video_monitor/: ui_monitor.c
app/lvgl_demo/rk_demo/rockit/: audio_client.c  audio_in.c  audio_out.c  audio_server.c  audio_server.h
app/lvgl_demo/rk_demo/setting/: bt_ui.c  setting_ui.c  wifi_ui.c
app/lvgl_demo/rk_demo/smart_home/: app_music.c  smart_home_ui.c
app/lvgl_demo/rk_demo/wifibt/: bt_server.c  wifi_server.c  wifibt.c  wifibt.h
app/lvgl_demo/sys/: cpu.c  cpu.h  soc.c  soc.h  timestamp.c  trace.c
app/lvgl_demo/tools/: astylerc  pre-commit
app/rkadk/examples/: CMakeLists.txt  rkadk_aov_record_test.c  rkadk_player_once_test.c  rkadk_player_test.c  rkadk_record_test.c
app/rkadk/examples/common/isp/: sample_aiq_uapi1.c  sample_aiq_uapi2.c  sample_isp.h
app/rkadk/src/: CMakeLists.txt
app/rkadk/src/aov/: rkadk_aov.c
app/rkadk/src/common/: rkadk_media_comm.c  rkadk_thumb_comm.c
app/rkadk/src/demuxer/: rkadk_demuxer.c
app/rkadk/src/live/rtmp/: rkadk_rtmp.c
app/rkadk/src/live/rtsp/: rkadk_rtsp.c
app/rkadk/src/muxer/: rkadk_muxer.c
app/rkadk/src/osd/: rkadk_osd.c
app/rkadk/src/param/: rkadk_param.c
app/rkadk/src/photo/: rkadk_photo.c
app/rkadk/src/player/: rkadk_player.c
app/rkadk/src/record/: rkadk_record.c
app/rkadk/src/storage/: rkadk_storage.c
app/rkadk/src/stream/: rkadk_stream.c
app/rkpartybox/: CMakeLists.txt  LICENSE
app/rkpartybox/app/: main.c  pbox_app.c  pbox_app.h  pbox_app_auto_scene.c  pbox_btsink_app.c  pbox_btsink_app.h  pbox_common.c  pbox_common.h  pbox_hotplug.c  pbox_hotplug.h  pbox_hotplug_app.c  pbox_hotplug_app.h  pbox_keyscan.c  pbox_keyscan.h  pbox_keyscan_app.c  pbox_keyscan_app.h  pbox_led_cjson.c  pbox_led_cjson.h  pbox_ledctrl.c  pbox_ledctrl.h  pbox_light_effect.c  pbox_light_effect.h  pbox_light_effect_app.c  pbox_light_effect_app.h  pbox_lvgl.c  pbox_lvgl.h  pbox_lvgl_app.c  pbox_lvgl_app.h  pbox_model.h  pbox_multi_echo.c  pbox_multi_echo.h  pbox_rockit.c  pbox_rockit.h  pbox_rockit_app.c  pbox_rockit_app.h  pbox_rockit_audio.c  pbox_rockit_audio.h  pbox_soc_bt.c  pbox_soc_bt.h  pbox_soc_bt_app.c  (+15 more)
app/rkpartybox/app/music_ui/: lv_demo_music.c  lv_demo_music.h  lv_demo_music_list.c  lv_demo_music_list.h  lv_demo_music_main.c  lv_demo_music_main.h  lv_demos.h
app/rkpartybox/app/music_ui/lvgl/: evdev.c  evdev.h  hal_drm.c
app/rkpartybox/bins/: .usb_config  .usb_config_nouac  Mono.pcm  S40-rkpartybox  Sense.pcm  Stereo.pcm  Widen.pcm  antifeedback_off.pcm  antifeedback_on.pcm  asound.conf  config_gender_detect.json  config_howling_evb.json  config_howling_vendor.json  config_reverb_doa_detect.json  doa.pcm  eq_balledmode.pcm  eq_bluesmode.pcm  eq_classicmode.pcm  eq_countrymode.pcm  eq_dancemode.pcm  eq_drc_player.h  eq_drc_player.json  eq_drc_player_ballad.json  eq_drc_player_blues.json  eq_drc_player_classical.json  eq_drc_player_contry.json  eq_drc_player_dance.json  eq_drc_player_electronic.json  eq_drc_player_jazz.json  eq_drc_player_pop.json  eq_drc_player_rock.json  eq_drc_recorder_evb_1chn.h  eq_drc_recorder_evb_1chn.json  eq_drc_recorder_evb_2chn.h  eq_drc_recorder_evb_2chn.json  eq_drc_recorder_vendor_2chn.h  eq_drc_recorder_vendor_2chn.json  eq_elecmode.pcm  eq_jazzmode.pcm  eq_offmode.pcm  (+19 more)
app/rkpartybox/hal/: hal_hw.c  hal_input.c
app/rkpartybox/hal/include/: hal_partybox.h
app/rkpartybox/hal/rockchip_coreboard/: board_audio_hw.h
app/rkpartybox/hal/rockchip_evb/: board_audio_hw.h
app/rkpartybox/include/: RkBtBase.h  RkBtSink.h  rc_comm_partybox.h  rc_partybox.h  rc_rkstudio_vendor.h  rkstudio_tuning.h
app/rkpartybox/interface/: pbox_interface.c  pbox_interface.h
app/rkpartybox/lib64/: libasan.so.8.0.0  libavcodec.so.58  libavformat.so.58  libavutil.so.56  libswresample.so.3
app/rkpartybox/modules/audio/: alsa_pcm.c  alsa_pcm.h
app/rkpartybox/modules/os/common/: osi_list.c
app/rkpartybox/modules/os/include/: os_minor_type.h  osi_list.h
app/rkpartybox/modules/os/linux/: os_file.c  os_file.h  os_task.c  os_task.h  os_utils.c
app/rkpartybox/modules/storage/: param.c  param.h
app/rkpartybox/modules/uac/: uac_common_def.h  uac_control.c  uac_control.h  uac_uevent.c  uac_uevent.h
app/rkpartybox/modules/userial/: userial_vendor.c  userial_vendor.h
app/rkpartybox/test/: CMakeLists.txt  inputkey.c
app/rkpartybox/utils/log/: slog.c  slog.h
debian/: mk-base-debian.sh  mk-image.sh  mk-rootfs-bookworm.sh  readme.md
docs/: .gitignore  readme_cn.md  readme_en.md
ubuntu/: mk-base-ubuntu.sh  mk-image.sh  mk-rootfs-jammy.sh  overlay  (+4 more)
(+159 files in other folders)
